--- a/pom.xml
+++ b/pom.xml
@@ -34,6 +34,9 @@
     <jcip-annotations.version>1.0</jcip-annotations.version>
     <spotbugs.version>4.0.0-beta4</spotbugs.version>
     <error_prone_annotations.version>2.3.3</error_prone_annotations.version>
+
+    <!--<springfox-swagger.version>3.0.0-SNAPSHOT</springfox-swagger.version>-->
+    <!--<springfox-swagger-ui-rfc6570.version>1.0.0</springfox-swagger-ui-rfc6570.version>-->
     <!--endregion-->
 
     <!--region Plugins-->
@@ -77,8 +80,44 @@
       </dependency>
       <!--endregion-->
 
+      <!--region Swagger-->
+      <!--<dependency>-->
+      <!--  <groupId>io.springfox</groupId>-->
+      <!--  <artifactId>springfox-swagger2</artifactId>-->
+      <!--  <version>${springfox-swagger.version}</version>-->
+      <!--</dependency>-->
+      <!--<dependency>-->
+      <!--  <groupId>io.springfox</groupId>-->
+      <!--  <artifactId>springfox-swagger-ui</artifactId>-->
+      <!--  <version>${springfox-swagger.version}</version>-->
+      <!--</dependency>-->
+      <!--<dependency>-->
+      <!--  <groupId>io.springfox.ui</groupId>-->
+      <!--  <artifactId>springfox-swagger-ui-rfc6570</artifactId>-->
+      <!--  <version>${springfox-swagger-ui-rfc6570.version}</version>-->
+      <!--</dependency>-->
+      <!--<dependency>-->
+      <!--  <groupId>io.springfox</groupId>-->
+      <!--  <artifactId>springfox-data-rest</artifactId>-->
+      <!--  <version>${springfox-swagger.version}</version>-->
+      <!--</dependency>-->
+      <!--<dependency>-->
+      <!--  <groupId>io.springfox</groupId>-->
+      <!--  <artifactId>springfox-bean-validators</artifactId>-->
+      <!--  <version>${springfox-swagger.version}</version>-->
+      <!--</dependency>-->
+      <!--endregion-->
+
     </dependencies>
   </dependencyManagement>
+
+  <repositories>
+    <repository>
+      <id>jcenter-snapshots</id>
+      <name>jcenter</name>
+      <url>http://oss.jfrog.org/artifactory/oss-snapshot-local/</url>
+    </repository>
+  </repositories>
 
   <dependencies>
     <dependency>
@@ -92,6 +131,10 @@
     <dependency>
       <groupId>org.springframework.boot</groupId>
       <artifactId>spring-boot-starter-data-rest</artifactId>
+    </dependency>
+    <dependency>
+      <groupId>org.springframework.boot</groupId>
+      <artifactId>spring-boot-starter-security</artifactId>
     </dependency>
 
     <dependency>
@@ -109,17 +152,6 @@
       <groupId>org.projectlombok</groupId>
       <artifactId>lombok</artifactId>
       <optional>true</optional>
-    </dependency>
-    <dependency>
-      <groupId>org.springframework.boot</groupId>
-      <artifactId>spring-boot-starter-test</artifactId>
-      <scope>test</scope>
-      <exclusions>
-        <exclusion>
-          <groupId>org.junit.vintage</groupId>
-          <artifactId>junit-vintage-engine</artifactId>
-        </exclusion>
-      </exclusions>
     </dependency>
 
     <!--region Common Annotations (CheckerFramework, JetBrains, SpotBugs, ErrorProne) -->
@@ -145,7 +177,46 @@
     </dependency>
     <!--endregion-->
 
+    <!--region Swagger -->
+    <!--<dependency>-->
+    <!--  <groupId>io.springfox</groupId>-->
+    <!--  <artifactId>springfox-swagger2</artifactId>-->
+    <!--</dependency>-->
+    <!-- <dependency> -->
+    <!--  <groupId>io.springfox</groupId> -->
+    <!--  <artifactId>springfox-swagger-ui</artifactId> -->
+    <!-- </dependency> -->
+    <!--<dependency>-->
+    <!--  <groupId>io.springfox.ui</groupId>-->
+    <!--  <artifactId>springfox-swagger-ui-rfc6570</artifactId>-->
+    <!--</dependency>-->
+    <!--<dependency>-->
+    <!--  <groupId>io.springfox</groupId>-->
+    <!--  <artifactId>springfox-data-rest</artifactId>-->
+    <!--</dependency>-->
+    <!--<dependency>-->
+    <!--  <groupId>io.springfox</groupId>-->
+    <!--  <artifactId>springfox-bean-validators</artifactId>-->
+    <!--</dependency>-->
+    <!--endregion-->
+
     <!--region Spring Boot test dependencies -->
+    <dependency>
+      <groupId>org.springframework.boot</groupId>
+      <artifactId>spring-boot-starter-test</artifactId>
+      <scope>test</scope>
+      <exclusions>
+        <exclusion>
+          <groupId>org.junit.vintage</groupId>
+          <artifactId>junit-vintage-engine</artifactId>
+        </exclusion>
+      </exclusions>
+    </dependency>
+    <dependency>
+      <groupId>org.springframework.security</groupId>
+      <artifactId>spring-security-test</artifactId>
+      <scope>test</scope>
+    </dependency>
     <dependency>
       <groupId>org.springframework.restdocs</groupId>
       <artifactId>spring-restdocs-mockmvc</artifactId>
